Twenty Fourteen: fix a display issue in screen sizes over 846 pixels where a post's featured image covers the post meta of the post above.
Props kraftbj and obenland, fixes #28649.
Built from https://develop.svn.wordpress.org/trunk@29101


git-svn-id: http://core.svn.wordpress.org/trunk@28887 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentyfourteen/css/ie.css
+++ b/wp-content/themes/twentyfourteen/css/ie.css
@@ -519,13 +519,12 @@ a.post-thumbnail:hover {
 	margin-right: auto;
 }
 
-.ie8 .full-width.singular .hentry.has-post-thumbnail,
-.ie8 .full-width.home .hentry.has-post-thumbnail {
+.ie8 .full-width .hentry.has-post-thumbnail:first-child {
 	margin-top: -72px;
 }
 
 
-.ie8 .singular .hentry.has-post-thumbnail {
+.ie8 .singular .site-content .hentry.has-post-thumbnail {
 	margin-top: 0;
 }
 
