--- a/wp-content/themes/twentyfourteen/style.css
+++ b/wp-content/themes/twentyfourteen/style.css
@@ -3344,8 +3344,7 @@ a.post-thumbnail:hover {
 	}
 
 	.full-width .site-content .has-post-thumbnail .entry-header,
-	.full-width.singular .site-content .hentry.has-post-thumbnail,
-	.full-width.home .site-content .hentry.has-post-thumbnail {
+	.full-width .site-content .hentry.has-post-thumbnail:first-child {
 		margin-top: -48px;
 	}
 
@@ -3678,8 +3677,7 @@ a.post-thumbnail:hover {
 		margin-left: 20px;
 	}
 
-	.full-width.singular .site-content .hentry.has-post-thumbnail,
-	.full-width.home .site-content .hentry.has-post-thumbnail {
+	.full-width .site-content .hentry.has-post-thumbnail:first-child {
 		margin-top: -72px;
 	}
 
